fix: smaller new post button on mobile

--- a/client/src/components/FabButton/FabButton.module.scss
+++ b/client/src/components/FabButton/FabButton.module.scss
@@ -1,9 +1,16 @@
+@import '../../styles/variables';
+
 .button {
+  --padding: 2rem;
   position: absolute;
-  bottom: calc(var(--footer-height) + 2rem);
-  right: 2rem;
+  bottom: calc(var(--footer-height) + var(--padding));
+  right: var(--padding);
   transform: scale(0);
   animation: fab-appear 0.4s cubic-bezier(0.4, 0, 0.2, 1) 0.3s forwards;
+
+  @media screen and (max-width: $mobile-breakpoint) {
+    --padding: 1rem;
+  }
 }
 
 @keyframes fab-appear {
